# model-viewer

./: .gitattributes  .gitignore  CMakeLists.txt  ModelViewer.sln  ModelViewer.vcxproj  ModelViewer.vcxproj.filters  README.md  glad.c  main.cpp  setup_windows.bat  shader.cpp
dependencies/assimp/include/assimp/: revision.h
dependencies/assimp/lib/Debug/: assimp-vc143-mtd.lib
dependencies/assimp/lib/Release/: assimp-vc143-mt.lib
dependencies/glad/include/glad/: glad.h
include/: IndexBuffer.h  Mesh.h  Model.h  Renderer.h  VertexArray.h  VertexBufferLayout.h  camera.h  shader.h
res/shaders/: Basic.shader  diagnostic.shader  model.shader  model_fragment.glsl  simple.shader
src/: Application.cpp  IndexBuffer.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  VertexArray.cpp  camera.cpp  main.cpp  shader.cpp
